--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,8 +1,8 @@
 global:
-    scrape_interval: 60s
-    external_labels:
-        monitor: 'Kanban'
+  scrape_interval: 60s
+  external_labels:
+    monitor: 'Kanban'
 scrape_configs:
-    - job_name: 'github'
-      target_groups:
-          - targets: ['filtra-exporter:8080']
+  - job_name: 'github'
+    static_configs:
+      - targets: ['filtra-exporter:8080']
