Removes obsolete command parameters
Owner and repository name are no longer passed via CLI, but are coming from the config.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     build: .
     environment:
       - GITHUB_TOKEN=$GITHUB_TOKEN
-    command: "-owner brejoc -repo test -debug"
+    command: "-debug"
     ports:
         - '8080:8080'
 
