Adds metric for planned column and labels switch to arrays
* New metric for planned column addded.
* Bug and support label should now be arrays, because there can be multiple
  labels for that porpose.
* Fix for bug column. Was still hard coded and not coming from the config.

--- a/config.toml
+++ b/config.toml
@@ -7,3 +7,5 @@ updateInterval = 3600
 name = "test"
 planned = "Planned"
 blocked = "Blocked"
+bugLabels = ["bug"]
+supportLabels = ["L3", "L3 question"]
