Moving to lists for planned and blocked columns
Planned and blocked columns are lists now, because it might happen that serveral
columns would fall into the same category and should be counted as such.

Fixes #12

--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ updateInterval = 3600
 
 [board]
 name = "test"
-planned = "Planned"
-blocked = "Blocked"
-bugLabels = ["bug"]
-supportLabels = ["L3", "L3 question"]
+plannedColumns  = ["Requested", "Planned"]
+blockedColumns  = ["Blocked / Postponed", "Waiting for Request"]
+bugLabels       = ["bug"]
+supportLabels   = ["L3", "L3 question"]
