--- a/config.toml
+++ b/config.toml
@@ -3,9 +3,17 @@ owner = "brejoc"
 name = "test"
 updateInterval = 3600
 
-[board]
-name = "test"
-plannedColumns  = ["Requested", "Planned"]
-blockedColumns  = ["Blocked / Postponed", "Waiting for Request"]
-bugLabels       = ["bug"]
-supportLabels   = ["L3", "L3 question"]
+[boards]
+    [boards.test]
+    name = "test"
+    plannedColumns  = ["Requested", "Planned"]
+    blockedColumns  = ["Blocked / Postponed", "Waiting for Request"]
+    bugLabels       = ["bug"]
+    supportLabels   = ["L3", "L3 question"]
+
+    [boards.test2]
+    name = "test2"
+    plannedColumns  = ["Todo"]
+    blockedColumns  = ["Blocked"]
+    bugLabels       = ["bug"]
+    supportLabels   = ["L3", "L3 question"]
