WIP: Move from prometheus to sqlite

--- a/config.toml
+++ b/config.toml
@@ -9,3 +9,6 @@ plannedColumns  = ["Requested", "Planned"]
 blockedColumns  = ["Blocked / Postponed", "Waiting for Request"]
 bugLabels       = ["bug"]
 supportLabels   = ["L3", "L3 question"]
+
+[database]
+URI = "./filtra.db"
