Adjust config for additional column names; Remove board name.

--- a/config.toml
+++ b/config.toml
@@ -4,9 +4,8 @@ name = "test"
 updateInterval = 3600
 
 [board]
-name = "test"
-plannedColumns  = ["Requested", "Planned"]
-blockedColumns  = ["Blocked / Postponed", "Waiting for Request"]
+plannedColumns  = ["Requested", "Planned", "Backlog"]
+blockedColumns  = ["Blocked", "Waiting", "Blocked / Postponed"]
 bugLabels       = ["bug"]
 supportLabels   = ["L3", "L3 question"]
 
