--- a/test-data/test_config.toml
+++ b/test-data/test_config.toml
@@ -2,10 +2,11 @@
 owner = "brejoc"
 name = "test"
 updateInterval = 3600
-
-[board]
-name = "test"
-plannedColumns  = ["Requested", "Planned"]
-blockedColumns  = ["Blocked / Postponed", "Waiting for Request"]
 bugLabels       = ["bug"]
 supportLabels   = ["L3", "L3 question"]
+
+[boards]
+
+  [boards.test]
+  plannedColumns  = ["Requested", "Planned"]
+  blockedColumns  = ["Blocked / Postponed", "Waiting for Request"]
